Finished login css.

--- a/ink-flow/public/index.html
+++ b/ink-flow/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="./src/index.css"/>
     <title>Login</title>
   </head>
-  <body>
+  <body class="img">
     <div id="root"></div>
     <script  type=" module" src="/src/pages/Login.jsx"></script>
     <!--
